# docker-chessd

./: AUTHORS  BUGS  ChangeLog  Dockerfile  HACKING  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  docker-entrypoint.sh
data/: Makefile.am
data/help/C/: abort  accept  adjudication  admins  alias  allobservers  blitz  bname  bsetup  busy  censor  credit  decline  eco  eggo  examine  fics-lingo  fics_lingo  formula  games  glicko  help  history  intro7  intro_moving  intro_talking  jsave  lecture1  logons  mailoldmoves  oldmoves  partner  pstat  ptell  register.email  rmatch  seek  stored  style  tell  (+4 more)
etc/: Makefile.am  chessd.conf
po/: LINGUAS  Makevars  POTFILES.in  pt_BR.po
sql/: Makefile.am  create-mysql.sql  create-psql.sql  dbinstall.sh  droptables.sql  funcs.php  index.php  init.sql  reg.php
src/: Makefile.am  adminproc.c  adminproc.h  adump.h  algcheck.c  algcheck.h  board.c  board.h  chessd_locale.h  chessd_main.c  chessd_main.h  command.c  command.h  command_network.h  common.h  comproc.c  comproc.h  config_genstrc.h  config_read.c  config_read.h  configuration.h  crypt-md5.c  crypt-md5.h  crypt-md5c.c  crypt-md5c.h  crypt-misc.c  crypt-misc.h  crypt.c  crypt.h  dbdbi.c  dbdbi.h  debug_com.c  debug_com.h  eco.c  eco.h  follow.c  follow.h  formula.c  formula.h  gamedb.c  (+59 more)
timeseal/: README
