chessddatadir = $(pkgdatadir)/data
srcdatadir = $(top_srcdir)/data

srcadhelpc = $(srcdatadir)/admin/C
adhelpcdir = $(chessddatadir)/admin/C
adhelpc_DATA = $(srcadhelpc)/accounts $(srcadhelpc)/acheckhelp		\
$(srcadhelpc)/aconfig $(srcadhelpc)/addaccounts				\
$(srcadhelpc)/addcomment $(srcadhelpc)/addplayer			\
$(srcadhelpc)/adjud_info $(srcadhelpc)/adjudicate $(srcadhelpc)/admin	\
$(srcadhelpc)/admin_hierarchy $(srcadhelpc)/adump $(srcadhelpc)/ahelp	\
$(srcadhelpc)/amotd $(srcadhelpc)/anews $(srcadhelpc)/announce		\
$(srcadhelpc)/annunreg $(srcadhelpc)/areload $(srcadhelpc)/asetadmin	\
$(srcadhelpc)/asetblitz $(srcadhelpc)/asetbughouse			\
$(srcadhelpc)/asetemail $(srcadhelpc)/asethandle			\
$(srcadhelpc)/asetlight $(srcadhelpc)/asetmaxplayer			\
$(srcadhelpc)/asetpasswd $(srcadhelpc)/asetrealname			\
$(srcadhelpc)/asetstd $(srcadhelpc)/asetv $(srcadhelpc)/asetwild	\
$(srcadhelpc)/ban $(srcadhelpc)/buglist $(srcadhelpc)/canewsd		\
$(srcadhelpc)/canewse $(srcadhelpc)/canewsf $(srcadhelpc)/canewsi	\
$(srcadhelpc)/canewsp $(srcadhelpc)/canewst $(srcadhelpc)/chkgame	\
$(srcadhelpc)/chkip $(srcadhelpc)/chkpl $(srcadhelpc)/chksc		\
$(srcadhelpc)/chkts $(srcadhelpc)/cmuzzle $(srcadhelpc)/cnewsd		\
$(srcadhelpc)/cnewse $(srcadhelpc)/cnewsf $(srcadhelpc)/cnewsi		\
$(srcadhelpc)/cnewsp $(srcadhelpc)/cnewst $(srcadhelpc)/createanews	\
$(srcadhelpc)/filter $(srcadhelpc)/finger $(srcadhelpc)/ftell		\
$(srcadhelpc)/hideinfo $(srcadhelpc)/lists $(srcadhelpc)/muzzle		\
$(srcadhelpc)/nuke $(srcadhelpc)/pose $(srcadhelpc)/projects		\
$(srcadhelpc)/quota $(srcadhelpc)/raisedead $(srcadhelpc)/register	\
$(srcadhelpc)/remplayer $(srcadhelpc)/rerank $(srcadhelpc)/server_com	\
$(srcadhelpc)/showcomment $(srcadhelpc)/shutdown $(srcadhelpc)/summon


bookdir = $(chessddatadir)/book
book_DATA = $(srcdatadir)/book/changes.txt			\
$(srcdatadir)/book/eco000.idx $(srcdatadir)/book/eco999.idx	\
$(srcdatadir)/book/fen.doc $(srcdatadir)/book/long001.idx	\
$(srcdatadir)/book/long999.idx $(srcdatadir)/book/nic000.idx	\
$(srcdatadir)/book/nic999.idx $(srcdatadir)/book/opening.doc


srchelpc = $(srcdatadir)/help/C
helpcdir = $(chessddatadir)/help/C
helpc_DATA = $(srchelpc)/_help $(srchelpc)/abort $(srchelpc)/abuser	\
$(srchelpc)/accept $(srchelpc)/addlist $(srchelpc)/addresses		\
$(srchelpc)/adjourn $(srchelpc)/adjournments $(srchelpc)/adjud_info	\
$(srchelpc)/adjudication $(srchelpc)/adm-info $(srchelpc)/adm-new	\
$(srchelpc)/adm_info $(srchelpc)/adm_new $(srchelpc)/admins		\
$(srchelpc)/alias $(srchelpc)/allobservers $(srchelpc)/analysis		\
$(srchelpc)/assess $(srchelpc)/backward $(srchelpc)/bell		\
$(srchelpc)/best $(srchelpc)/blitz $(srchelpc)/bname			\
$(srchelpc)/boards $(srchelpc)/bsetup $(srchelpc)/busy			\
$(srchelpc)/censor $(srchelpc)/chan_1 $(srchelpc)/channel		\
$(srchelpc)/clearmessages $(srchelpc)/clrsquare $(srchelpc)/cls		\
$(srchelpc)/cls_info $(srchelpc)/computers $(srchelpc)/courtesyabort	\
$(srchelpc)/credit $(srchelpc)/cshout $(srchelpc)/date			\
$(srchelpc)/decline $(srchelpc)/draw $(srchelpc)/eco $(srchelpc)/eggo	\
$(srchelpc)/etiquette $(srchelpc)/examine $(srchelpc)/fics-lingo	\
$(srchelpc)/fics_lingo $(srchelpc)/ficsfaq $(srchelpc)/finger		\
$(srchelpc)/fixes $(srchelpc)/flag $(srchelpc)/flip			\
$(srchelpc)/fmessage $(srchelpc)/formula $(srchelpc)/forward		\
$(srchelpc)/ftp-hints $(srchelpc)/ftp_hints $(srchelpc)/games		\
$(srchelpc)/getgi $(srchelpc)/getpi $(srchelpc)/glicko			\
$(srchelpc)/gm_game $(srchelpc)/gnotify $(srchelpc)/goboard		\
$(srchelpc)/gonum $(srchelpc)/handle $(srchelpc)/handles		\
$(srchelpc)/hbest $(srchelpc)/help $(srchelpc)/highlight		\
$(srchelpc)/history $(srchelpc)/hrank $(srchelpc)/inchannel		\
$(srchelpc)/index $(srchelpc)/inetchesslib $(srchelpc)/interfaces	\
$(srchelpc)/intro0 $(srchelpc)/intro1 $(srchelpc)/intro2		\
$(srchelpc)/intro3 $(srchelpc)/intro4 $(srchelpc)/intro5		\
$(srchelpc)/intro6 $(srchelpc)/intro7 $(srchelpc)/intro_basics		\
$(srchelpc)/intro_general $(srchelpc)/intro_information			\
$(srchelpc)/intro_moving $(srchelpc)/intro_playing			\
$(srchelpc)/intro_settings $(srchelpc)/intro_special			\
$(srchelpc)/intro_talking $(srchelpc)/intro_welcome $(srchelpc)/iset	\
$(srchelpc)/it $(srchelpc)/jkill $(srchelpc)/journal $(srchelpc)/jsave	\
$(srchelpc)/kibitz $(srchelpc)/kiblevel $(srchelpc)/lag			\
$(srchelpc)/lecture1 $(srchelpc)/lightning $(srchelpc)/limits		\
$(srchelpc)/lists $(srchelpc)/llogons $(srchelpc)/logons		\
$(srchelpc)/ltell $(srchelpc)/mailmess $(srchelpc)/mailmoves		\
$(srchelpc)/mailoldmoves $(srchelpc)/mailstored $(srchelpc)/match	\
$(srchelpc)/messages $(srchelpc)/mexamine $(srchelpc)/moretime		\
$(srchelpc)/motd.std $(srchelpc)/motd_help $(srchelpc)/moves		\
$(srchelpc)/newrating $(srchelpc)/news $(srchelpc)/next			\
$(srchelpc)/noplay $(srchelpc)/notes $(srchelpc)/notify			\
$(srchelpc)/observe $(srchelpc)/oldmoves $(srchelpc)/open		\
$(srchelpc)/partner $(srchelpc)/password $(srchelpc)/pause		\
$(srchelpc)/pending $(srchelpc)/play $(srchelpc)/prefresh		\
$(srchelpc)/private $(srchelpc)/promote $(srchelpc)/pstat		\
$(srchelpc)/ptell $(srchelpc)/ptime $(srchelpc)/qtell $(srchelpc)/quit	\
$(srchelpc)/rank $(srchelpc)/ratings $(srchelpc)/refresh		\
$(srchelpc)/register $(srchelpc)/register.dist				\
$(srchelpc)/register.email $(srchelpc)/resign $(srchelpc)/revert	\
$(srchelpc)/rmatch $(srchelpc)/say $(srchelpc)/seek			\
$(srchelpc)/servers $(srchelpc)/set $(srchelpc)/shout			\
$(srchelpc)/shout_abuse $(srchelpc)/shout_quota $(srchelpc)/showlist	\
$(srchelpc)/simabort $(srchelpc)/simadjourn $(srchelpc)/simallabort	\
$(srchelpc)/simalladjourn $(srchelpc)/simgames $(srchelpc)/simmatch	\
$(srchelpc)/simnext $(srchelpc)/simopen $(srchelpc)/simpass		\
$(srchelpc)/simprev $(srchelpc)/simuls $(srchelpc)/smoves		\
$(srchelpc)/soapbox $(srchelpc)/sought $(srchelpc)/sourcecode		\
$(srchelpc)/sposition $(srchelpc)/standard $(srchelpc)/statistics	\
$(srchelpc)/stored $(srchelpc)/style $(srchelpc)/sublist		\
$(srchelpc)/switch $(srchelpc)/takeback $(srchelpc)/teamgames		\
$(srchelpc)/tell $(srchelpc)/time $(srchelpc)/timeseal			\
$(srchelpc)/todo $(srchelpc)/toggle $(srchelpc)/tomove			\
$(srchelpc)/totals $(srchelpc)/tournset $(srchelpc)/unalias		\
$(srchelpc)/uncensor $(srchelpc)/unexamine $(srchelpc)/unnotify		\
$(srchelpc)/unobserve $(srchelpc)/unpause $(srchelpc)/unseek		\
$(srchelpc)/untimed $(srchelpc)/uptime $(srchelpc)/uscf_faq		\
$(srchelpc)/variables $(srchelpc)/whenshut $(srchelpc)/whisper		\
$(srchelpc)/who $(srchelpc)/wild $(srchelpc)/withdraw			\
$(srchelpc)/wname $(srchelpc)/xtell $(srchelpc)/znotify


messagesdir = $(chessddatadir)/messages
messages_DATA = $(srcdatadir)/messages/admotd				\
$(srcdatadir)/messages/login $(srcdatadir)/messages/logout		\
$(srcdatadir)/messages/logout.fancy $(srcdatadir)/messages/motd		\
$(srcdatadir)/messages/unregistered $(srcdatadir)/messages/welcome



statsdir = $(chessddatadir)/stats
stats_DATA = # $(srcdatadir)/stats/newratings_data

srcusagec = $(srcdatadir)/usage/C
usagecdir = $(chessddatadir)/usage/C
usagec_DATA = $(srcusagec)/abort $(srcusagec)/accept			\
$(srcusagec)/acheckhelp $(srcusagec)/aconfig $(srcusagec)/addcomment	\
$(srcusagec)/addlist $(srcusagec)/addplayer $(srcusagec)/adjourn	\
$(srcusagec)/adjudicate $(srcusagec)/admin $(srcusagec)/adump		\
$(srcusagec)/ahelp $(srcusagec)/alias $(srcusagec)/allobservers		\
$(srcusagec)/anews $(srcusagec)/announce $(srcusagec)/annunreg		\
$(srcusagec)/areload $(srcusagec)/asetadmin $(srcusagec)/asetblitz	\
$(srcusagec)/asetbughouse $(srcusagec)/asetclock			\
$(srcusagec)/asetemail $(srcusagec)/asethandle $(srcusagec)/asetlight	\
$(srcusagec)/asetmaxplayer $(srcusagec)/asetpasswd			\
$(srcusagec)/asetrealname $(srcusagec)/asetstd				\
$(srcusagec)/asetsuicide $(srcusagec)/asetv $(srcusagec)/asetwild	\
$(srcusagec)/assess $(srcusagec)/backward $(srcusagec)/bell		\
$(srcusagec)/best $(srcusagec)/bname $(srcusagec)/boards		\
$(srcusagec)/bsetup $(srcusagec)/bugwho $(srcusagec)/canewsd		\
$(srcusagec)/canewse $(srcusagec)/canewsf $(srcusagec)/canewsi		\
$(srcusagec)/canewsp $(srcusagec)/canewst $(srcusagec)/cbest		\
$(srcusagec)/chkgame $(srcusagec)/chkip $(srcusagec)/chkpl		\
$(srcusagec)/chksc $(srcusagec)/chkts $(srcusagec)/clearmessages	\
$(srcusagec)/clrsquare $(srcusagec)/cnewsd $(srcusagec)/cnewse		\
$(srcusagec)/cnewsf $(srcusagec)/cnewsi $(srcusagec)/cnewsp		\
$(srcusagec)/cnewst $(srcusagec)/copygame $(srcusagec)/crank		\
$(srcusagec)/cshout $(srcusagec)/date $(srcusagec)/decline		\
$(srcusagec)/draw $(srcusagec)/eco $(srcusagec)/examine			\
$(srcusagec)/finger $(srcusagec)/flag $(srcusagec)/flip			\
$(srcusagec)/fmessage $(srcusagec)/follow $(srcusagec)/forward		\
$(srcusagec)/ftell $(srcusagec)/games $(srcusagec)/getgi		\
$(srcusagec)/getpi $(srcusagec)/ginfo $(srcusagec)/goboard		\
$(srcusagec)/handles $(srcusagec)/hbest $(srcusagec)/help		\
$(srcusagec)/hideinfo $(srcusagec)/history $(srcusagec)/hrank		\
$(srcusagec)/inchannel $(srcusagec)/info $(srcusagec)/iset		\
$(srcusagec)/it $(srcusagec)/jkill $(srcusagec)/journal			\
$(srcusagec)/jsave $(srcusagec)/kibitz $(srcusagec)/limits		\
$(srcusagec)/llogons $(srcusagec)/logons $(srcusagec)/ltell		\
$(srcusagec)/mailhelp $(srcusagec)/mailmess $(srcusagec)/mailmoves	\
$(srcusagec)/mailoldmoves $(srcusagec)/mailstored $(srcusagec)/match	\
$(srcusagec)/messages $(srcusagec)/mexamine $(srcusagec)/moretime	\
$(srcusagec)/moves $(srcusagec)/news $(srcusagec)/next			\
$(srcusagec)/nuke $(srcusagec)/observe $(srcusagec)/oldmoves		\
$(srcusagec)/oldpstat $(srcusagec)/open $(srcusagec)/partner		\
$(srcusagec)/password $(srcusagec)/pause $(srcusagec)/pending		\
$(srcusagec)/pfollow $(srcusagec)/play $(srcusagec)/pobserve		\
$(srcusagec)/pose $(srcusagec)/prefresh $(srcusagec)/primary		\
$(srcusagec)/promote $(srcusagec)/pstat $(srcusagec)/ptell		\
$(srcusagec)/ptime $(srcusagec)/qtell $(srcusagec)/quit			\
$(srcusagec)/quota $(srcusagec)/raisedead $(srcusagec)/rank		\
$(srcusagec)/refresh $(srcusagec)/rematch $(srcusagec)/remplayer	\
$(srcusagec)/rerank $(srcusagec)/resign $(srcusagec)/resume		\
$(srcusagec)/revert $(srcusagec)/rmatch $(srcusagec)/say		\
$(srcusagec)/seek $(srcusagec)/set $(srcusagec)/shout			\
$(srcusagec)/showcomment $(srcusagec)/showlist $(srcusagec)/shutdown	\
$(srcusagec)/simabort $(srcusagec)/simadjourn $(srcusagec)/simallabort	\
$(srcusagec)/simalladjourn $(srcusagec)/simgames $(srcusagec)/simmatch	\
$(srcusagec)/simnext $(srcusagec)/simopen $(srcusagec)/simpass		\
$(srcusagec)/simprev $(srcusagec)/smoves $(srcusagec)/smposition	\
$(srcusagec)/sought $(srcusagec)/sposition $(srcusagec)/statistics	\
$(srcusagec)/stored $(srcusagec)/style $(srcusagec)/sublist		\
$(srcusagec)/summon $(srcusagec)/switch $(srcusagec)/takeback		\
$(srcusagec)/tell $(srcusagec)/time $(srcusagec)/toggle			\
$(srcusagec)/tomove $(srcusagec)/tournset $(srcusagec)/unalias		\
$(srcusagec)/unexamine $(srcusagec)/unobserve $(srcusagec)/unpause	\
$(srcusagec)/unseek $(srcusagec)/uptime $(srcusagec)/ustat		\
$(srcusagec)/variables $(srcusagec)/whenshut $(srcusagec)/whisper	\
$(srcusagec)/who $(srcusagec)/withdraw $(srcusagec)/wname		\
$(srcusagec)/xkibitz $(srcusagec)/xtell $(srcusagec)/xwhisper		\
$(srcusagec)/znotify

install-data-local:
	install -d -m0755 $(chessddatadir)/boards/wild

EXTRA_DIST += $(adhelpc_DATA) $(book_DATA) $(helpc_DATA)	\
	      $(messages_DATA) $(usagec_DATA) # $(stats_DATA)
